--- a/project_0/googlefront.css
+++ b/project_0/googlefront.css
@@ -4,39 +4,74 @@ body{
 
 nav{
 	text-align: right;
+	padding: 10px;
 }  
 
 nav a {
 	text-decoration: none;
+	color: black;
+	font-size: 0.8em;
+	padding: 4px;
 }
 
-div, form{
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
+nav a:hover{
+	text-decoration: underline;
 }
 
+div{
+	display: grid;
+	grid-template-rows: 2fr 1fr;
+	grid-template-columns: 1fr;
+	grid-gap: 20px;
+}
 
-input{
-	border-style: solid;
+div form{
+	display: grid;
+	grid-row: 2/3;
+	justify-self: center;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap: 20px;
+}
+
+img{
+	padding-top: 100px;
+	grid-row: 1/2;
+	grid-column: 1/3;
+	justify-self: center;
 }
 
 #inputquery {
 	border-radius: 20px;
-	border-color: lightgray;
+	border: 1px solid lightgray;
 	padding: 10px;
 	min-width: 200px;
 	width: 50vw;
+	grid-row: 1/2;
+	grid-column: 1/5;
+	justify-self: center;
 }
 
 .button {
+	border-radius: 4px;
 	border: hidden;
-	background-color: white;
+	background-color: #f6f6f6;
 	padding: 10px;
 	color: #5F6368;
+	grid-row: 2/3;
+	justify-self: center;
+	font-size: 0.9em;
 }
 
 .button:hover{
 	border: 1px solid lightgray;
-	border-radius: 4px;
+	color: black;
+}
+
+#left-button{
+	grid-column: 2/3;
+}
+
+#right-button{
+	grid-column: 3/4;
 }
