--- a/project_0/googlefront.css
+++ b/project_0/googlefront.css
@@ -18,11 +18,15 @@ nav a:hover{
 	text-decoration: underline;
 }
 
-div{
+.main {
 	display: grid;
 	grid-template-rows: 2fr 1fr;
 	grid-template-columns: 1fr;
 	grid-gap: 20px;
+}
+
+#logo{
+	justify-self: center;
 }
 
 div form{
@@ -39,6 +43,15 @@ img{
 	grid-row: 1/2;
 	grid-column: 1/3;
 	justify-self: center;
+}
+
+span{
+    color: #4285f4;
+    font: 16px roboto-regular, arial, sans-serif;
+    right: 60px;
+    position: relative;
+    top: 0px;
+    white-space: nowrap;
 }
 
 #inputquery {
@@ -60,6 +73,7 @@ img{
 	color: #5F6368;
 	grid-row: 2/3;
 	justify-self: center;
+	grid-column: 2/4;
 	font-size: 0.9em;
 }
 
@@ -68,10 +82,10 @@ img{
 	color: black;
 }
 
-#left-button{
+#search-button{
 	grid-column: 2/3;
 }
 
-#right-button{
+#lucky-button{
 	grid-column: 3/4;
 }
